Fixed navigation spacing

--- a/src/assets/css/navigation.css
+++ b/src/assets/css/navigation.css
@@ -15,6 +15,24 @@
     border: 0px;
     color: rgb(223, 65, 65);
     font-size: large;
+    padding-left: 1vw;
+    padding-right: 1vw;
+    font-family: BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
+}
+
+#basic-nav-dropdown
+{
+    padding-top: 0;
+    padding-bottom: 0;
+}
+
+.nav-button-dropdown
+{
+    border: 0px;
+    color: rgb(223, 65, 65);
+    font-size: large;
+    padding-left: 1vw;
+    padding-right: 1vw;
     font-family: BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
 }
 
@@ -32,8 +50,6 @@
     color: white;
     background-color: rgb(223, 65, 65);
     font-weight: bold;
-    padding-left: 1.6vw;
-    padding-right: 1.6vw;
     cursor: pointer;
 }
 
